--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,7 +56,11 @@
 <body>
   <img src="YOUR_PROFILE_PICTURE_URL" alt="El Mejboudali" class="profile-img">
   <h1>El Mejboudali.Director</h1>
-  <p class="quote">"Quand on tire, on raconte pas sa vie." – Le Bon, la Brute et le Truand</p><a href="mailto:your.email@example.com" class="link-button">Contact Pro – Email</a> <a href="https://site.bangbangfilm.com" class="link-button">BANG BANG FILM – Site officiel</a> <a href="https://instagram.com/bangbangfilm" class="link-button">BANG BANG FILM – Insta</a> <a href="https://youtube.com/yourchannel" class="link-button">Voir mes films</a>
+  <p class="quote">"Quand on tire, on raconte pas sa vie." – Le Bon, la Brute et le Truand</p>
 
+  <a href="mailto:elmejboudmohali78@gmail.com" class="link-button">Contact Pro – Email</a>
+  <a href="https://bangbangfilms.fr/" class="link-button">BANG BANG FILM – Site officiel</a>
+  <a href="https://www.instagram.com/bang.bangfilms?igsh=OWNsbzMxOXlmbTNl" class="link-button">BANG BANG FILM – Insta</a>
+  <a href="https://youtube.com/@elmejboudali?si=yurP-tdD2HTGqurW" class="link-button">Voir mes films</a>
 </body>
 </html>
