--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-  <img src="YOUR_PROFILE_PICTURE_URL" alt="El Mejboudali" class="profile-img">
+  <img src="https://mnt.data/A_circular_profile_image_in_black_and_white.png" alt="El Mejboudali" class="profile-img">
   <h1>El Mejboudali.Director</h1>
   <p class="quote">"Quand on tire, on raconte pas sa vie." – Le Bon, la Brute et le Truand</p>
 
