--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
       border-radius: 8px;
       transition: background-color 0.3s;
     }
-    .link-button:hover {
-      background-color: #444;
+  .link-button:hover {
+  background-color: #444;
+  transform: scale(1.05);
+  transition: 0.3s ease-in-out;
     }
   </style>
 </head>
